// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectRecipient should render disabled 1`] = `
<div>
  <div>
    <div
      class="relative flex items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1"
      >
        <div
          class="sc-AxjAm fWyUly mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
        />
      </div>
      <input
        class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
        data-testid="SelectRecipient__input"
        disabled=""
        type="text"
        value=""
      />
      <div
        class="absolute flex items-center space-x-3 cursor-pointer right-4"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render empty 1`] = `
<div>
  <div>
    <div
      class="relative flex items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1"
      >
        <div
          class="sc-AxjAm fWyUly mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
        />
      </div>
      <input
        class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
        data-testid="SelectRecipient__input"
        type="text"
        value=""
      />
      <div
        class="absolute flex items-center space-x-3 cursor-pointer right-4"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render invalid 1`] = `
<div>
  <div>
    <div
      class="relative flex items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1"
      >
        <div
          class="sc-AxjAm fWyUly mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
        />
      </div>
      <input
        aria-invalid="true"
        class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
        data-testid="SelectRecipient__input"
        type="text"
        value=""
      />
      <div
        class="absolute flex items-center space-x-3 cursor-pointer right-4"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient should render with preselected address 1`] = `
<div>
  <div>
    <div
      class="relative flex items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="absolute left-1"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-3"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full"
          >
            <img
              alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 193, 7)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
              title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
      </div>
      <input
        class="sc-AxiKw geAJqa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
        data-testid="SelectRecipient__input"
        type="text"
        value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
      />
      <div
        class="absolute flex items-center space-x-3 cursor-pointer right-4"
        data-testid="SelectRecipient__select-recipient"
      >
        <div
          class="sc-AxirZ eEbZjj"
          height="20"
          width="20"
        >
          <svg>
            user.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
